# linear_motor_ros2_driver

./: README.md
linear_motor_controller/: CMakeLists.txt  package.xml
linear_motor_controller/config/: linear_motor_params.yaml
linear_motor_controller/launch/: linear_motor_controller.launch.py
linear_motor_controller/src/: linear_motor_client_node.cpp  linear_motor_controller_node.cpp
linear_motor_msgs/: CMakeLists.txt  package.xml
linear_motor_msgs/srv/: Mode.srv
